<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tejasdwarkaram.movienightgame.ScoresActivity"
    android:id="@+id/scores">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Leaderboard"
            android:id="@+id/scoreLbl"
            android:layout_gravity="center_horizontal" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/firstGrid"
            android:rowCount="2"
            android:columnCount="3">

            <TextView
                android:layout_width="123dp"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/firstPos"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Score"
                android:id="@+id/firstScore"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Player"
                android:id="@+id/firstPlayer"
                android:layout_row="1"
                android:layout_column="1" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/secondGrid"
            android:rowCount="2"
            android:columnCount="3">

            <TextView
                android:layout_width="123dp"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/secondPos"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/SecondScore"
                android:id="@+id/secondScore"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/SecondPlayer"
                android:id="@+id/secondPlayer"
                android:layout_row="1"
                android:layout_column="1" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/thirdGrid"
            android:rowCount="2"
            android:columnCount="3">

            <TextView
                android:layout_width="123dp"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/thirdPos"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ThirdScore"
                android:id="@+id/thirdScore"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ThirdPlayer"
                android:id="@+id/thirdPlayer"
                android:layout_row="1"
                android:layout_column="1" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/fourthGrid"
            android:rowCount="2"
            android:columnCount="3">

            <TextView
                android:layout_width="123dp"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/fourthPos"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/FourthScore"
                android:id="@+id/fourthScore"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/FourthPlayer"
                android:id="@+id/fourthPlayer"
                android:layout_row="1"
                android:layout_column="1" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/fifthGrid"
            android:rowCount="2"
            android:columnCount="3">

            <TextView
                android:layout_width="123dp"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/fifthPos"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/FifthScore"
                android:id="@+id/fifthScore"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/FifthPlayer"
                android:id="@+id/fifthPlayer"
                android:layout_row="1"
                android:layout_column="1" />
        </GridLayout>

        <Button
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/Play_Again"
            android:id="@+id/restartBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="restartGame" />


    </LinearLayout>
</RelativeLayout>
